--- a/test/exec/CMakeLists.txt
+++ b/test/exec/CMakeLists.txt
@@ -15,3 +15,6 @@ target_link_libraries(echo-server-sample PUBLIC jsoncpp_lib_static ${BOOSTSSL_TA
 
 add_executable(echo-client-sample echo_client_sample.cpp)
 target_link_libraries(echo-client-sample PUBLIC jsoncpp_lib_static ${BOOSTSSL_TARGET} bcos-utilities::bcos-utilities OpenSSL::SSL OpenSSL::Crypto)
+
+add_executable(msg-codec-perf msg_codec_perf.cpp)
+target_link_libraries(msg-codec-perf PUBLIC jsoncpp_lib_static ${BOOSTSSL_TARGET} bcos-utilities::bcos-utilities OpenSSL::SSL OpenSSL::Crypto)
